[workspace]
members = ["roqollage", "qollage"]
resolver = "2"

[profile.release]
lto = true

[profile.bench]
lto = true

[patch.crates-io]
struqture = { git = "https://github.com/dberthault/struqture.git" }
struqture-py = { git = "https://github.com/dberthault/struqture.git" }
qoqo = { git = "https://github.com/dberthault/qoqo.git", branch = "Pyo3_0.12_update" }
roqoqo = { git = "https://github.com/dberthault/qoqo.git", branch = "Pyo3_0.12_update" }
